--------------------------

0.9-5	(under development)
    o	add more debugging information in RJavaClassLoader to trace
	cases where class path entries are invalid or discarded

    o	detect support for -Xrs and enable it by default (this prevents
	Java from killing R process on interrupt)

    o	restore locales after Java initialization (some JVMs clobber
	locales with incompatible settings).

0.9-4	2013-03-11
    o	added support for unboxing of Double[], Integer[] and Boolean[]
	to .jevalArray(.., simplify=TRUE) and thus also to .jcall()

    o	Windows: add Java configuartion paths before existing PATH
	entries

    o	Windows: honor a new option "java.home" to override JAVA_HOME
	environment variable and system settings to allow co-existence
	of other tools that may require differen Java paths.

    o	Windows: fix a buglet in error reporting when no Java is installed

    o	raise an error if the number of arguments to a Java call exceeds
	maxJavaPars. Previously, calls woud be silently truncated.
	Note that maxJavaPars can be raised by compiling rJava, e.g. with:
	PKG_CFLAGS=-DmaxJavaPars=96 R CMD INSTAL rJava_...

0.9-3	2011-12-10
    o	bugfix: .jinit() was failing on Java 1.4 with
	"cannot obtain Class.getSimpleName method ID"
	since the method is only present in Java 1.5+
	This was inadvertent, rJava aims to support Java 1.2+

0.9-2	2011-10-26
    o	When NOAWT is set, rJava will enable headless mode in the JVM
	by setting the java.awt.headless property to true during
	initialization in .jinit()

    o	All C-level entry points are now pre-cached when rJava is
	loaded such that calls can be made much faster since symbols
	don't need to be looked up. This should speed up calls to
	methods that take very little time as well as other parts
	such as checking for exceptions.

0.9-1	2011-06-28
    o	fixed Java detection from registry on Windows (bug introduced
	in 0.9-0)

0.9-0	2011-06-22
    o	fixes issues introduced by several new features in the late